# pokemon_ai

./: Pipfile  pyproject.toml
resources/data/formatted/: pokemons.json
resources/data/original/pokemon_home/: pokemons.json
resources/data/original/poketetsu/: abilities.json  moves.json  pokemons.json
resources/scripts/: Node.py  data_format.py  main.py  order.py  scraping.py  scraping_moves.py  scraping_pokemons.py
resources/scripts/board/: dataclass_classes.py  enum_classes.py  index.py
resources/scripts/envs/: dataclass_classes.py  enum_classes.py  pokemon.py  test.py
resources/scripts/format/: pokemons.py
resources/scripts/pokemon_home/: get_pokemon_data.py
resources/scripts/scraping/: abilities.py  moves.py  pokemons.py
