[tool.poetry]
name = "pokemon-ai"
version = "0.1.0"
description = ""
authors = ["ShugoYabuno <shugo.ybn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
bs4 = "^0.0.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
